# relray

./: .gitignore  CLAUDE.md  GOAL.md  PLAN.md  README.md  contraction.yaml  go.mod  go.sum
c/: .gitignore  CLAUDE.md  Makefile  README.md
c/src/: camera.c  camera.h  cie_data.h  lorentz.c  lorentz.h  main.c  material.c  material.h  output.c  output.h  render.c  render.h  render_cuda.cu  render_cuda.h  retarded.c  retarded.h  rng.h  scene.c  scene.h  scenefile.c  scenefile.h  shape.c  shape.h  spd.c  spd.h  vec.h
cmd/gencie/: main.go
cmd/gencie91/: main.go
cmd/relray/: main.go
pkg/camera/: camera.go
pkg/geometry/: box.go  cone.go  cylinder.go  disk.go  geometry.go  geometry_test.go  plane.go  pyramid.go  sphere.go  transform.go  triangle.go
pkg/lorentz/: lorentz.go  lorentz_test.go
pkg/material/: checker.go  checker_sphere.go  diffuse.go  glass.go  material.go  mirror.go
pkg/output/: output.go
pkg/render/: render.go  tracer.go
pkg/retarded/: retarded.go  retarded_test.go
pkg/scene/: light.go  scene.go
pkg/scenefile/: scenefile.go  types.go  vars.go
pkg/spectrum/: blackbody.go  (+3 more)
rust/: Cargo.toml
rust/src/: camera.rs  cie_data.rs  lib.rs  lorentz.rs  main.rs  output.rs  render.rs  retarded.rs  scene.rs  scenefile.rs  spectrum.rs  vars.rs  vec.rs
rust/src/geometry/: box_shape.rs  cone.rs  cylinder.rs  disk.rs  mod.rs  plane.rs  pyramid.rs  sphere.rs  transform.rs  triangle.rs
rust/src/material/: checker.rs  checker_sphere.rs  diffuse.rs  glass.rs  mirror.rs  mod.rs
scenes/: contraction.yaml  room.yaml  shapes_demo.yaml  spheres.yaml
(+4 files in other folders)
