[package]
name = "rrelray"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
image = "0.25"
rayon = "1.10"
rand = "0.9"
rand_chacha = "0.9"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
